--- a/lesson_12_hm/css/style.css
+++ b/lesson_12_hm/css/style.css
@@ -39,7 +39,7 @@
 }
 
 .translate__item {
-	background: url('img/smile_bg.jpg') 0 0/auto 100% no-repeat;
+	background: url('../img/smile_bg.jpg') 0 0/auto 100% no-repeat;
 
 }
 
